unpackaged/main/default/objects/Account/fields/Support_Notes__c.field-meta.xml
<CustomField>
    <fullName>Support_Notes__c</fullName>
    <label>Support Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>