unpackaged/main/default/objects/Account/fields/Support_Product_s__c.field-meta.xml
<CustomField>
    <fullName>Support_Product_s__c</fullName>
    <label>Support Product(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>67000001 Level 1: Software Assurance</fullName>
            </value>
            <value>
                <fullName>67000002 Level 2: Hardware Replacement - Controllers</fullName>
            </value>
            <value>
                <fullName>67000003 Level 3: Hardware Replacement - Sets</fullName>
            </value>
            <value>
                <fullName>67000004 Level 4: Configuration Support</fullName>
            </value>
            <value>
                <fullName>67000005 Level 5: On-Site (8-5 Monday thru Friday)</fullName>
            </value>
            <value>
                <fullName>67000006 Level 6: On-Site (7 x 24 x 365)</fullName>
            </value>
            <value>
                <fullName>67000007 Level 7: Streamline Ports</fullName>
            </value>
            <value>
                <fullName>67000101 Level 8A: Mitel Contact Center</fullName>
            </value>
            <value>
                <fullName>67000102 Level 8B: Mitel CSM</fullName>
            </value>
            <value>
                <fullName>67000103 Level 8C: Call Recording</fullName>
            </value>
            <value>
                <fullName>67000104 Level 8D: UCA Stand-Alone</fullName>
            </value>
            <value>
                <fullName>67000105 Level 8E: MCA Stand-Alone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>