unpackaged/main/default/objects/Account/fields/Support_Service_Credit_Hold__c.field-meta.xml
<CustomField>
    <fullName>Support_Service_Credit_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Support Service - Credit Hold</label>
    <type>Checkbox</type>
</CustomField>