unpackaged/main/default/objects/Account/fields/Support_Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Support_Term_End_Date__c</fullName>
    <label>Support Term End Date</label>
    <type>Date</type>
</CustomField>