unpackaged/main/default/objects/Account/fields/Support_Tier__c.field-meta.xml
<CustomField>
    <fullName>Support_Tier__c</fullName>
    <defaultValue>"Level3"</defaultValue>
    <label>Support Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level1</fullName>
            </value>
            <value>
                <fullName>Level2</fullName>
            </value>
            <value>
                <fullName>Level3</fullName>
                <default>true</default>
                <label>Level3</label>
            </value>
            <value>
                <fullName>Level4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>