unpackaged/main/default/objects/Account/fields/Suspension_Date__c.field-meta.xml
<CustomField>
    <fullName>Suspension_Date__c</fullName>
    <formula>TODAY()  + 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suspension Date</label>
    <type>Date</type>
</CustomField>