unpackaged/main/default/objects/Account/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <defaultValue>"Per Call"</defaultValue>
    <label>Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Call</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>