unpackaged/main/default/objects/Account/fields/Text1__c.field-meta.xml
<CustomField>
    <fullName>Text1__c</fullName>
    <label>Text1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>