unpackaged/main/default/objects/Account/fields/WFFL_Buy_Amount__c.field-meta.xml
<CustomField>
    <fullName>WFFL_Buy_Amount__c</fullName>
    <label>WFFL Buy Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>