unpackaged/main/default/objects/Account/fields/WFFL_Buy_As_Of_Date__c.field-meta.xml
<CustomField>
    <fullName>WFFL_Buy_As_Of_Date__c</fullName>
    <label>WFFL Buy As Of Date</label>
    <type>Date</type>
</CustomField>