unpackaged/main/default/objects/Account/fields/WFFL_Buy_Flag__c.field-meta.xml
<CustomField>
    <fullName>WFFL_Buy_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WFFL Buy Flag</label>
    <type>Checkbox</type>
</CustomField>