unpackaged/main/default/objects/Account/fields/zaapit__Create_Task2__c.field-meta.xml
<CustomField>
    <fullName>zaapit__Create_Task2__c</fullName>
    <label>Create Task - Deprecated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Send Letter</fullName>
            </value>
            <value>
                <fullName>Send Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>