unpackaged/main/default/objects/Account/fields/zaapit__Create_Task__c.field-meta.xml
<CustomField>
    <fullName>zaapit__Create_Task__c</fullName>
    <description>You need to connect each line to a workflow rule that should be connected to a workflow task</description>
    <label>Create Task (M)  - Deprecated</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Send Letter</fullName>
            </value>
            <value>
                <fullName>Send Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>