unpackaged/main/default/objects/Account/fields/zaapit__Hierarchy_Level__c.field-meta.xml
<CustomField>
    <fullName>zaapit__Hierarchy_Level__c</fullName>
    <formula>IF(ParentId==null,0,1+
IF(Parent.ParentId==null,0,1+
IF(Parent.Parent.ParentId==null,0,1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hierarchy Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>