unpackaged/main/default/objects/Account/validationRules/AcctSeed__Discount_Days_Due_Positive_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeed__Discount_Days_Due_Positive_Value</fullName>
    <active>false</active>
    <description>The discount days field must be a positive value.</description>
    <errorConditionFormula>AcctSeed__Discount_Days_Due__c &lt; 0</errorConditionFormula>
    <errorDisplayField>AcctSeed__Discount_Days_Due__c</errorDisplayField>
    <errorMessage>The discount days due field must be a positive number.</errorMessage>
</ValidationRule>