unpackaged/main/default/objects/Account/validationRules/AcctSeed__Discount_Percent_Positive_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeed__Discount_Percent_Positive_Value</fullName>
    <active>false</active>
    <description>The discount percent field must be a positive value.</description>
    <errorConditionFormula>AcctSeed__Discount_Percent__c &lt; 0</errorConditionFormula>
    <errorDisplayField>AcctSeed__Discount_Percent__c</errorDisplayField>
    <errorMessage>The discount % field must be a positive number.</errorMessage>
</ValidationRule>