unpackaged/main/default/objects/Account/validationRules/Shipping_State_Canada.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_State_Canada</fullName>
    <active>false</active>
    <errorConditionFormula>AND ( 
OR(ShippingCountry = "CA", ShippingCountry="CAN", ShippingCountry="canada", ShippingCountry = "Can",ShippingCountry = "Canada",ShippingCountry = "Canada"), 
OR( 
LEN(ShippingState) &lt; 2, 
NOT( 
CONTAINS("AB:BC:MB:NB:NL:NT:NS:NU:ON:PC:QC:SK:YT", ShippingState) 
)))
&amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c</errorConditionFormula>
    <errorDisplayField>ShippingState</errorDisplayField>
    <errorMessage>Please enter a valid 2-digit shipping state for this Canadian Providence. Valid Entries are:
(AB:BC:MB:NB:NL:NT:NS:NU:ON:PC:QC:SK:YT")</errorMessage>
</ValidationRule>