unpackaged/main/default/objects/Account/validationRules/Shipping_State_USA.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_State_USA</fullName>
    <active>false</active>
    <errorConditionFormula>AND ( 
OR(ShippingCountry = "US", ShippingCountry="United States",ShippingCountry="us",ShippingCountry="usa",ShippingCountry="USA"),
OR( 
LEN(ShippingState) &lt; 2, 
NOT( 
CONTAINS("AL:AK:AZ:AR:CA:CO:CT:DE:DC:FL:GA:HI:ID:" &amp; 
"IL:IN:IA:KS:KY:LA:ME:MD:MA:MI:MN:MS:MO:MT:NE:NV:NH:" &amp; 
"NJ:NM:NY:NC:ND:OH:OK:OR:PA:RI:SC:SD:TN:TX:UT:VT:VA:" &amp; 
"WA:WV:WI:WY", ShippingState) 
)))
&amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c</errorConditionFormula>
    <errorDisplayField>ShippingState</errorDisplayField>
    <errorMessage>Please enter a valid 2-digit Shipping State</errorMessage>
</ValidationRule>