unpackaged/main/default/objects/Account/listViews/Accounts.listView-meta.xml
<ListView>
    <fullName>Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Alias__c</columns>
    <columns>Account_Source_acq__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>Billing_Last_Statement_Created_Date__c</columns>
    <columns>A_R_Balance_1_30__c</columns>
    <columns>A_R_Balance_31_60__c</columns>
    <columns>A_R_Balance_61_90__c</columns>
    <columns>A_R_Balance_90__c</columns>
    <columns>AcctSeed__Billing_Contact__c</columns>
    <columns>Billing_Contact_Email__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Federal_Tax_ID_Number__c</columns>
    <columns>AcctSeed__Accounting_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Source_acq__c</field>
        <operation>equals</operation>
        <value>IPro,EON</value>
    </filters>
    <label>Accounts (Default)</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>