unpackaged/main/default/objects/Account/listViews/Accounts_FNB_Parent.listView-meta.xml
<ListView>
    <fullName>Accounts_FNB_Parent</fullName>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Alias__c</columns>
    <columns>Billing_Send_Statement__c</columns>
    <columns>Billing_Last_Statement_Created_Date__c</columns>
    <columns>AcctSeed__Billing_Contact__c</columns>
    <columns>Billing_Contact_Email__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Federal_Tax_ID_Number__c</columns>
    <columns>AcctSeed__Accounting_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>First National Bank of Pennsylvania</value>
    </filters>
    <filters>
        <field>PARENT_NAME</field>
        <operation>equals</operation>
    </filters>
    <label>Accounts-FNB Parent</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>