unpackaged/main/default/objects/Account/listViews/Accounts_on_Credit_Hold.listView-meta.xml
<ListView>
    <fullName>Accounts_on_Credit_Hold</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Support_Service_Credit_Hold__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Accounts on Credit Hold</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>