unpackaged/main/default/objects/Account/listViews/All_Accounts_Comm3.listView-meta.xml
<ListView>
    <fullName>All_Accounts_Comm3</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Source_acq__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Source_acq__c</field>
        <operation>equals</operation>
        <value>Comm3</value>
    </filters>
    <label>All Accounts - Comm3</label>
    <language>en_US</language>
    <sharedTo>
        <group>Group_Comm3</group>
    </sharedTo>
</ListView>