unpackaged/main/default/objects/Account/listViews/All_Accounts_Contract_Capital.listView-meta.xml
<ListView>
    <fullName>All_Accounts_Contract_Capital</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Alias__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>Federal_Tax_ID_Number__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>AcctSeed__Accounting_Type__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Financial_Partner__c</field>
        <operation>equals</operation>
        <value>Contract Capital</value>
    </filters>
    <label>All Accounts Contract Capital</label>
    <language>en_US</language>
</ListView>