unpackaged/main/default/objects/Account/listViews/All_Accounts_With_Billing_Contact_Email.listView-meta.xml
<ListView>
    <fullName>All_Accounts_With_Billing_Contact_Email</fullName>
    <booleanFilter>(1 or 2 or 3) and 4</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Alias__c</columns>
    <columns>Billing_Send_Statement__c</columns>
    <columns>Billing_Last_Statement_Created_Date__c</columns>
    <columns>A_R_Balance_1_30__c</columns>
    <columns>A_R_Balance_31_60__c</columns>
    <columns>A_R_Balance_61_90__c</columns>
    <columns>A_R_Balance_90__c</columns>
    <columns>A_R_Credit_Balance__c</columns>
    <columns>AcctSeed__Billing_Contact__c</columns>
    <columns>Billing_Contact_Email__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Federal_Tax_ID_Number__c</columns>
    <columns>AcctSeed__Accounting_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>A_R_Balance_31_60__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>A_R_Balance_61_90__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>A_R_Balance_90__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Billing_Send_Statement__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Accounts-With Billing Aged Past 30 days</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>