unpackaged/main/default/objects/Account/listViews/All_Accounts_With_Opportunities.listView-meta.xml
<ListView>
    <fullName>All_Accounts_With_Opportunities</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Alias__c</columns>
    <columns>Opp_Count__c</columns>
    <columns>MSC_Count__c</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Federal_Tax_ID_Number__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>AcctSeed__Accounting_Type__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opp_Count__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <label>All Accounts-With Opportunities</label>
    <language>en_US</language>
</ListView>