unpackaged/main/default/objects/Account/listViews/Bus_Dev.listView-meta.xml
<ListView>
    <fullName>Bus_Dev</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Alias__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Bus Dev</value>
    </filters>
    <label>Bus Dev</label>
    <language>en_US</language>
    <sharedTo>
        <group>All_iPro_Users</group>
    </sharedTo>
</ListView>