unpackaged/main/default/objects/Account/listViews/Clients.listView-meta.xml
<ListView>
    <fullName>Clients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Alias__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opp_Count__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Clients</label>
    <language>en_US</language>
    <sharedTo>
        <group>All_iPro_Users</group>
    </sharedTo>
</ListView>