unpackaged/main/default/objects/Account/listViews/McKool_Partners_Vendors.listView-meta.xml
<ListView>
    <fullName>McKool_Partners_Vendors</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>contains</operation>
        <value>Partner,Vendor</value>
    </filters>
    <label>McKool's Partners and Vendors</label>
    <language>en_US</language>
    <sharedTo>
        <group>All_iPro_Users</group>
    </sharedTo>
</ListView>